<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CourseRating</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="courseName">Enter course name</string>
    <string name="teacherName">Enter teacher\'s name</string>
    <string name="comments">Comments on course</string>
    <string name="genEd">General Education</string>
    <string name="majorCredit">Major</string>
    <string name="electiveCredit">Elective</string>
    <string name="ratingHint">Rate this course</string>
    <string name="submit">Submit</string>
    <string name="showReview">Show Reviews</string>
    <string name="addReview">Add a Review</string>
    <string name="no_review">No Reviews</string>

</resources>
