<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/crsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/courseName"
        android:inputType="text"
        android:onClick="submitClick" />

    <EditText
        android:id="@+id/teachName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/teacherName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/comments"
        android:inputType="textMultiLine" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp" >

        <RadioButton
            android:id="@+id/genEdRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/genEd" />

        <RadioButton
            android:id="@+id/majorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/majorCredit" />

        <RadioButton
            android:id="@+id/electiveRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electiveCredit" />

    </RadioGroup>

    <RatingBar
        android:id="@+id/crsRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ratingHint" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:onClick="submitClick"
        android:text="@string/submit" />

</LinearLayout>